@@ -1,7 +1,7 @@
-Writer2LaTeX source version 1.1.1
+Writer2LaTeX source version 1.1.2
 =================================
 
-Writer2LaTeX is (c) 2002-2009 by Henrik Just.
+Writer2LaTeX is (c) 2002-2010 by Henrik Just.
 The source is available under the terms and conditions of the
 GNU LESSER GENERAL PUBLIC LICENSE, version 2.1.
 Please see the file COPYING.TXT for details.
@@ -13,7 +13,7 @@ Overview
 The source of Writer2LaTeX consists of three major parts:
 
 * A general purpose java library for converting OpenDocument files into LaTeX,
-  BibTeX, xhtml and xhtml+MathML
+  BibTeX, xhtml, xhtml+MathML and EPUB
   This is to be found in the packages writer2latex.* and should only be used
   through the provided api writer2latex.api.*
 * A command line utility writer2latex.Application
@@ -44,15 +44,15 @@ Writer2LaTeX uses Ant version 1.5 or later (http://ant.apache.org) to build.
 Some java libraries from OOo are needed to build the filter part of Writer2LaTeX,
 these are jurt.jar, unoil.jar, ridl.jar and juh.jar.
 
-To make these files available for the compiler, edit the file build.xml in
-the writer2latex09 directory as follows:
+To make these files available for the compiler, edit the file build.xml
+as follows:
 
 The lines
-	<property name="OFFICE_HOME" location="/opt/openoffice.org/basis3.0" />
-	<property name="URE_HOME" location="/opt/openoffice.org/ure" />
-should be modified to point to your OOo installation
+	<property name="OFFICE_CLASSES" location="/usr/share/java/openoffice" />
+	<property name="URE_CLASSES" location="/usr/share/java/openoffice" />
+should be modified to the directories where your OOo installation keeps these files
 
-To build, open a command shell, navigate to the writer2latex09 directory and type
+To build, open a command shell, navigate to the source directory and type
 
 ant oxt
 
@@ -72,7 +72,7 @@ In addition to oxt, the build file supports the following targets:
     clean
 
 
-Henrik Just, November 2009
+Henrik Just, April 2010
 
 
 Thanks to Michael Niedermair for writing the original ant build file
